@@ -30,9 +30,9 @@ Finally, legal html names for colors, like 'red', 'burlywood' and
 """
 import re
 
-from numerix import array, arange, take, put, Float, Int, where, \
+from numerix import array, arange, take, put, Float, Int, putmask, \
      zeros, asarray, sort, searchsorted, sometrue, ravel, divide,\
-     ones, typecode, typecodes, alltrue
+     ones, typecode, typecodes, alltrue, clip
 from numerix.mlab import amin, amax
 import numerix.ma as ma
 import numerix as nx
@@ -536,8 +536,9 @@ def makeMappingArray(N, data):
     lut[0] = y1[0]
     lut[-1] = y0[-1]
     # ensure that the lut is confined to values between 0 and 1 by clipping it
-    lut = where(lut > 1., 1., lut)
-    lut = where(lut < 0., 0., lut)
+    clip(lut, 0.0, 1.0)
+    #lut = where(lut > 1., 1., lut)
+    #lut = where(lut < 0., 0., lut)
     return lut
 
 
@@ -588,16 +589,16 @@ class Colormap:
             vtype = 'array'
             xma = ma.asarray(X)
             xa = xma.filled(0)
-            mask_bad = ma.getmaskorNone(xma)
+            mask_bad = ma.getmask(xma)
         if typecode(xa) in typecodes['Float']:
-            xa = where(xa == 1.0, 0.9999999, xa) # Tweak so 1.0 is in range.
+            putmask(xa, xa==1.0, 0.9999999) #Treat 1.0 as slightly less than 1.
             xa = (xa * self.N).astype(Int)
-        mask_under = xa < 0
-        mask_over = xa > self.N-1
-        xa = where(mask_under, self._i_under, xa)
-        xa = where(mask_over, self._i_over, xa)
-        if mask_bad is not None: # and sometrue(mask_bad):
-            xa = where(mask_bad, self._i_bad, xa)
+        # Set the over-range indices before the under-range;
+        # otherwise the under-range values get converted to over-range.
+        putmask(xa, xa>self.N-1, self._i_over)
+        putmask(xa, xa<0, self._i_under)
+        if mask_bad is not None and mask_bad.shape == xa.shape:
+            putmask(xa, mask_bad, self._i_bad)
         rgba = take(self._lut, xa)
         if vtype == 'scalar':
             rgba = tuple(rgba[0,:])
@@ -752,7 +753,7 @@ class Normalize:
             return 0.*value
         else:
             if clip:
-                mask = ma.getmaskorNone(val)
+                mask = ma.getmask(val)
                 val = ma.array(nx.clip(val.filled(vmax), vmin, vmax),
                                 mask=mask)
             result = (val-vmin)/float(vmax-vmin)
@@ -804,7 +805,7 @@ class LogNorm(Normalize):
             return 0.*value
         else:
             if clip:
-                mask = ma.getmaskorNone(val)
+                mask = ma.getmask(val)
                 val = ma.array(nx.clip(val.filled(vmax), vmin, vmax),
                                 mask=mask)
             result = (ma.log(val)-nx.log(vmin))/(nx.log(vmax)-nx.log(vmin))
